start renderer work

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "third/glm"]
 	path = third/glm
 	url = git@git.zhlh6.cn:KeyFicller/glm.git
+[submodule "third/glfw"]
+	path = third/glfw
+	url = git@git.zhlh6.cn:KeyFicller/glfw.git
+[submodule "third/glad"]
+	path = third/glad
+	url = git@git.zhlh6.cn:KeyFicller/glad.git
