--- a/demo/imgui.ini
+++ b/demo/imgui.ini
@@ -9,8 +9,13 @@ Size=667,595
 Collapsed=0
 
 [Window][Test Widgets]
-Pos=514,234
+Pos=815,199
 Size=1555,1302
+Collapsed=0
+
+[Window][delete object]
+Pos=1436,876
+Size=367,189
 Collapsed=0
 
 [Docking][Data]
