--- a/demo/imgui.ini
+++ b/demo/imgui.ini
@@ -9,14 +9,34 @@ Size=667,595
 Collapsed=0
 
 [Window][Test Widgets]
-Pos=1181,781
-Size=2336,1623
+Pos=2232,36
+Size=768,1839
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][delete object]
 Pos=1436,876
 Size=367,189
 Collapsed=0
 
+[Window][Doc Space]
+Pos=209,108
+Size=2564,1533
+Collapsed=0
+
+[Window][Main Doc Space]
+Pos=0,0
+Size=3000,1875
+Collapsed=0
+
+[Window][Render Window]
+Pos=0,36
+Size=2230,1839
+Collapsed=0
+DockId=0x00000001,0
+
 [Docking][Data]
+DockSpace   ID=0x20DF49E3 Window=0x154FBFB0 Pos=0,36 Size=3000,1839 Split=X Selected=0x8D039F73
+  DockNode  ID=0x00000001 Parent=0x20DF49E3 SizeRef=2230,1839 CentralNode=1 HiddenTabBar=1 Selected=0x78934092
+  DockNode  ID=0x00000002 Parent=0x20DF49E3 SizeRef=768,1839 Selected=0x8D039F73
 
