--- a/demo/imgui.ini
+++ b/demo/imgui.ini
@@ -9,10 +9,10 @@ Size=667,595
 Collapsed=0
 
 [Window][Test Widgets]
-Pos=1585,36
-Size=1415,1839
+Pos=402,201
+Size=798,599
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][delete object]
 Pos=1436,876
@@ -26,17 +26,25 @@ Collapsed=0
 
 [Window][Main Doc Space]
 Pos=0,0
-Size=3000,1875
+Size=1200,800
 Collapsed=0
 
 [Window][Render Window]
 Pos=0,36
-Size=1583,1839
+Size=400,764
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][Render Statistic]
+Pos=402,36
+Size=798,163
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
-DockSpace   ID=0x20DF49E3 Window=0x154FBFB0 Pos=0,36 Size=3000,1839 Split=X Selected=0x8D039F73
-  DockNode  ID=0x00000001 Parent=0x20DF49E3 SizeRef=1583,1839 CentralNode=1 HiddenTabBar=1 Selected=0x78934092
-  DockNode  ID=0x00000002 Parent=0x20DF49E3 SizeRef=1415,1839 Selected=0x8D039F73
+DockSpace     ID=0x20DF49E3 Window=0x154FBFB0 Pos=0,36 Size=1200,764 Split=X Selected=0x8D039F73
+  DockNode    ID=0x00000001 Parent=0x20DF49E3 SizeRef=1583,1839 CentralNode=1 HiddenTabBar=1 Selected=0x78934092
+  DockNode    ID=0x00000002 Parent=0x20DF49E3 SizeRef=1415,1839 Split=Y Selected=0x8D039F73
+    DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=1415,394 Selected=0xF5A94B09
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1415,1443 Selected=0x8D039F73
 
