add undo framework

--- a/demo/imgui.ini
+++ b/demo/imgui.ini
@@ -37,14 +37,22 @@ DockId=0x00000004,0
 
 [Window][Render Statistic]
 Pos=2038,0
-Size=962,845
+Size=962,427
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000005,0
+
+[Window][Command Stack]
+Pos=2038,429
+Size=962,416
+Collapsed=0
+DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace     ID=0x20DF49E3 Window=0x154FBFB0 Pos=0,0 Size=3000,1875 Split=X Selected=0x78934092
-  DockNode    ID=0x00000004 Parent=0x20DF49E3 SizeRef=2036,764 CentralNode=1 HiddenTabBar=1 Selected=0x78934092
-  DockNode    ID=0x00000001 Parent=0x20DF49E3 SizeRef=962,764 Split=Y
-    DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=532,324 Selected=0xF5A94B09
-    DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=532,394 Selected=0x8D039F73
+DockSpace       ID=0x20DF49E3 Window=0x154FBFB0 Pos=0,0 Size=3000,1875 Split=X Selected=0x78934092
+  DockNode      ID=0x00000004 Parent=0x20DF49E3 SizeRef=2036,764 CentralNode=1 HiddenTabBar=1 Selected=0x78934092
+  DockNode      ID=0x00000001 Parent=0x20DF49E3 SizeRef=962,764 Split=Y
+    DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=532,324 Split=Y Selected=0xF5A94B09
+      DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=962,427 Selected=0xF5A94B09
+      DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=962,416 Selected=0xCEDDF12E
+    DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=532,394 Selected=0x8D039F73
 
