--- a/demo/imgui.ini
+++ b/demo/imgui.ini
@@ -9,8 +9,8 @@ Size=667,595
 Collapsed=0
 
 [Window][Test Widgets]
-Pos=402,382
-Size=798,418
+Pos=2038,867
+Size=962,1008
 Collapsed=0
 DockId=0x00000003,0
 
@@ -26,31 +26,33 @@ Collapsed=0
 
 [Window][Main Doc Space]
 Pos=0,0
-Size=1200,800
+Size=3000,1875
 Collapsed=0
 
 [Window][Render Window]
 Pos=0,36
-Size=400,764
+Size=2216,1195
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000007,0
 
 [Window][Render Statistic]
-Pos=402,36
-Size=798,173
+Pos=2218,36
+Size=782,930
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Command Stack]
-Pos=402,211
-Size=798,169
+Pos=2218,968
+Size=782,907
 Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace       ID=0x20DF49E3 Window=0x154FBFB0 Pos=0,36 Size=1200,764 Split=X Selected=0x78934092
-  DockNode      ID=0x00000004 Parent=0x20DF49E3 SizeRef=2036,764 CentralNode=1 HiddenTabBar=1 Selected=0x78934092
-  DockNode      ID=0x00000001 Parent=0x20DF49E3 SizeRef=962,764 Split=Y
+DockSpace       ID=0x20DF49E3 Window=0x154FBFB0 Pos=0,36 Size=3000,1839 Split=X Selected=0x78934092
+  DockNode      ID=0x00000004 Parent=0x20DF49E3 SizeRef=2216,764 Split=Y Selected=0x78934092
+    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=2282,1195 HiddenTabBar=1 Selected=0x78934092
+    DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=2282,642 CentralNode=1
+  DockNode      ID=0x00000001 Parent=0x20DF49E3 SizeRef=782,764 Split=Y
     DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=532,324 Split=Y Selected=0xF5A94B09
       DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=962,427 Selected=0xF5A94B09
       DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=962,416 Selected=0xCEDDF12E
